# mcp-doc-generator

./: .cursorrules  .dockerignore  .gitignore  .gitleaks.toml  .gitmessage  BRANCHES_INFO.md  Dockerfile  Dockerfile.distroless  FIXES_COMPLETED.md  FUTURE_SMART_ANALYSIS.md  HYBRID_MODES_COMPLETE.md  LICENSE  MARKETING_MONETIZATION_GUIDE.md  MCP_INSPECTOR_ANALYSIS.md  PROJECT_STATUS.txt  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SMART_MODE_IMPLEMENTED.md  STRATEGIA_KOMERCJALIZACJI.md  TABLE_FORMATTING_SUMMARY.md  TEMPLATE_MODE_IMPLEMENTED.md  TEST_RESULTS_FINAL.md  TODO.md  docker-compose.distroless.yml  docker-compose.yml  fly.toml  package.json  pyproject.toml  railway.toml  requirements.txt  test.sh  test_all_tools.py  test_fixed_tools.py  test_template_mode.py
.githooks/: README.md  commit-msg
articles/: README.md  devto-article-01-how-i-built-mcp-server.md
docs/: BRANCHES_INFO.md  BRANCH_PROTECTION_SETUP.md  BRANCH_STRUCTURE_SUMMARY.md  C4_DIFFERENCE_EXPLAINED.md  CLAUDE_DESKTOP_SETUP.md  COMMIT_RULES.md  CONFIG_FILES_EXPLAINED.md  CONTRIBUTING.md  CONVERSION_FLOW_EXPLAINED.md  CURSOR_NPX_SETUP.md  DALL_E_TEXT_RENDERING_PROBLEM.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_CONTAINERS_EXPLAINED.md  DRAWIO_GUIDE.md  GITHUB_ARTIFACTS_GUIDE.md  GITHUB_REPO_INFO.md  HYBRID_APPROACH_EXPLAINED.md  JAK_DZIALA_SERWER_MCP copy.md  JAK_DZIALA_SERWER_MCP.md  JAK_DZIALA_SERWER_MCP_with_diagrams.md  MCP_SERVER_ARCHITECTURE.md  NPX_INSTALLATION.md  ORGANIZATION_SUMMARY.md  PROJECT_STATUS.txt  PROJECT_SUMMARY.md  PROTECTED_BRANCHES.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  REORGANIZATION_COMPLETE.md  ROADMAP.md  TEST_RESULTS.md  TEST_RESULTS_MCP.md  USAGE_GUIDE.md  USAGE_SCENARIOS.md
examples/: example_usage.md  sample_c4_context.puml  sample_dependency_graph.dot  sample_flowchart.mmd  template_mode_examples.md
output/: README.md
output_test_results/: test_adr_001.md
scripts/: backup_branches.sh  cleanup-docker-cache.sh  convert_doc_to_pdf.py  convert_doc_to_pdf_alternative.py  convert_doc_via_mcp.py  convert_doc_via_mcp_simple.py  docker-build.sh  generate_diagrams_for_doc.py  generate_examples.py  install.sh  mcp_client.py  regenerate_context_verified.py
src/: __init__.py  server.py
test-server/: EXAMPLE_PROMPTS.md  README.md
(+40 files in other folders)
